--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react-quill": "https://esm.sh/react-quill@2.0.0-beta.4?external=react,react-dom",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/"
   }
 }
 </script>
