--- a/index.html
+++ b/index.html
@@ -29,14 +29,6 @@
         color: #ffffff;
         -webkit-font-smoothing: antialiased;
       }
-      ::selection {
-        background: rgba(99, 102, 241, 0.3);
-        color: #fff;
-      }
-      input:focus, textarea:focus, button:focus, [contenteditable]:focus {
-        outline: none !important;
-        box-shadow: none !important;
-      }
       .glass {
         background: rgba(20, 20, 20, 0.7);
         backdrop-filter: blur(24px) saturate(180%);
@@ -53,7 +45,6 @@
       .bubble-user {
         background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
         border-radius: 22px 22px 4px 22px;
-        box-shadow: 0 4px 15px rgba(79, 70, 229, 0.2);
       }
       .bubble-model {
         background: #1c1c1e;
@@ -61,38 +52,10 @@
         border: 1px solid rgba(255, 255, 255, 0.06);
       }
       @keyframes float {
-        0%, 100% { transform: translateY(0) rotate(0); }
-        50% { transform: translateY(-10px) rotate(2deg); }
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-10px); }
       }
-      .float-slow {
-        animation: float 6s ease-in-out infinite;
-      }
-      @keyframes messageAppear {
-        0% { opacity: 0; transform: translateY(30px) scale(0.85); filter: blur(5px); }
-        60% { transform: translateY(-5px) scale(1.03); filter: blur(0); }
-        100% { opacity: 1; transform: translateY(0) scale(1); }
-      }
-      .message-animate-user {
-        animation: messageAppear 0.5s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
-        transform-origin: bottom right;
-      }
-      .message-animate-model {
-        animation: messageAppear 0.5s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
-        transform-origin: bottom left;
-      }
-      @keyframes typing {
-        0%, 100% { transform: translateY(0); opacity: 0.3; }
-        50% { transform: translateY(-4px); opacity: 1; }
-      }
-      .typing-dot {
-        width: 5px;
-        height: 5px;
-        background: #71717a;
-        border-radius: 50%;
-        animation: typing 1.4s infinite ease-in-out;
-      }
-      .typing-dot:nth-child(2) { animation-delay: 0.2s; }
-      .typing-dot:nth-child(3) { animation-delay: 0.4s; }
+      .float-slow { animation: float 6s ease-in-out infinite; }
       .gradient-mesh {
         position: fixed;
         top: 0;
@@ -100,10 +63,7 @@
         width: 100%;
         height: 100%;
         z-index: -1;
-        background: 
-          radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-          radial-gradient(at 50% 0%, hsla(225,39%,10%,1) 0, transparent 50%), 
-          radial-gradient(at 100% 0%, hsla(339,49%,10%,1) 0, transparent 50%);
+        background: radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), radial-gradient(at 50% 0%, hsla(225,39%,10%,1) 0, transparent 50%);
         opacity: 0.8;
       }
     </style>
@@ -116,7 +76,7 @@
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
     "react-quill": "https://esm.sh/react-quill@2.0.0-beta.4?external=react,react-dom",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "react-dom/": "https://esm.sh/react-dom@18.2.0/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
   }
 }
 </script>
