--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         opacity: 0.8;
       }
     </style>
+    <script>
+      // Browser polyfill for process.env to prevent crashes in libraries that expect it
+      window.process = window.process || { env: {} };
+    </script>
     <script type="importmap">
 {
   "imports": {
@@ -84,5 +88,6 @@
   <body>
     <div class="gradient-mesh"></div>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
