--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </style>
     <script>
       // Global polyfill to prevent crashes in libraries expecting Node.js environment
-      window.process = { env: {} };
+      window.process = window.process || { env: {} };
     </script>
   <script type="importmap">
 {
@@ -89,6 +89,6 @@
   <body>
     <div class="gradient-mesh"></div>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
