refactor: Improve Gemini API key handling and build configuration
Updates the Gemini API key retrieval logic to more robustly handle different environment setups. Also refactors Vite build configuration to optimize for production, disabling sourcemaps and enabling terser minification. Adjusts tsconfig.json for better compatibility and type checking.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       }
     </style>
     <script>
-      // Global polyfill to prevent crashes in libraries expecting Node.js environment
-      window.process = window.process || { env: {} };
+      // Global safety polyfill
+      window.process = { env: {} };
     </script>
   <script type="importmap">
 {
