feat: Configure Vite for ESM and update dependencies
Updates the project to use ES Modules by setting `type: "module"` in `package.json`. This change also refactors API key retrieval in `gemini.ts` to support both `import.meta.env` and `process.env`, improving flexibility across different deployment environments.

Additionally, dependency versions are updated to their latest stable releases. The Vite development server port is set to 3000.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       }
     </style>
     <script>
-      // Global safety polyfill
+      // Global safety polyfill for production environment
       window.process = { env: {} };
     </script>
   <script type="importmap">
@@ -89,6 +89,7 @@
   <body>
     <div class="gradient-mesh"></div>
     <div id="root"></div>
+    <!-- Vite will process this during build -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
